// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Completed 1`] = `
<div
  className="sc-EHOje godpWe sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check-square fa-w-14 "
      data-icon="check-square"
      data-prefix="far"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352zm-35.864-241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Completed
</div>
`;

exports[`Storyshots Task List Completed 1`] = `
<div
  className="sc-EHOje godpWe sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check-square fa-w-14 "
      data-icon="check-square"
      data-prefix="far"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352zm-35.864-241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Completed
</div>
`;

exports[`Storyshots Task List Locked 1`] = `
<div
  className="sc-EHOje cQvVXi sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-lock fa-w-14 "
      data-icon="lock"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Fly One
</div>
`;

exports[`Storyshots Task List Unlocked 1`] = `
<div
  className="sc-EHOje godpWe sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-square fa-w-14 "
      data-icon="square"
      data-prefix="far"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Go to the bank
</div>
`;

exports[`Storyshots Task Locked 1`] = `
<div
  className="sc-EHOje cQvVXi sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-lock fa-w-14 "
      data-icon="lock"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Fly One
</div>
`;

exports[`Storyshots Task Unlocked 1`] = `
<div
  className="sc-EHOje godpWe sc-htpNat jsjUsa"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa lnsbnA"
    onClick={undefined}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-square fa-w-14 "
      data-icon="square"
      data-prefix="far"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  Go to the bank
</div>
`;
